syntax = "proto3";

package discord;

import "google/protobuf/empty.proto";

option go_package = "/discord_oauth";

service Discord {
    rpc GetOAuthUrl (google.protobuf.Empty) returns (GetOAuthUrlResponse) {}
    rpc LoginWithDiscord (LoginWithDiscordRequest) returns (LoginWithDiscordResponse) {}
    rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (LoginWithDiscordResponse) {}
    rpc GetMyInfo(GetMyInfoRequest) returns (GetMyInfoResponse) {}
}

message GetOAuthUrlResponse {
    string url = 1;
}

message LoginWithDiscordRequest {
    string code = 1;
}

message LoginWithDiscordResponse {
    oneof response {
        DiscordAccessTokenResponse access_token = 1;
        DiscordErrorResponse error = 2;
    }
}

message DiscordErrorResponse {
    string error = 1;
    string error_description = 2;
}

message DiscordAccessTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
    string token_type = 4;
    string scope = 5;
}

message RefreshAccessTokenRequest {
    string refresh_token = 1;
}

message GetMyInfoRequest {
    string access_token = 1;
}

message GetMyInfoResponse {
    oneof response {
        UserInfo my_info = 1;
        DiscordErrorResponse error = 2;
    }
}

message UserInfo {
    string user_id = 1;
    string user_name = 2;
    string avatar = 3;
    string discriminator = 4;
}